<resources>
    <string name="app_name">GF Community</string>

    <string name="products_authority">com.gfcommunity.course.gfcommunity.data.products.ProductsContentProvider</string>
    <string name="recipes_authority">com.gfcommunity.course.gfcommunity.data.recipes.RecipesContentProvider</string>
    <string name="text">text</string>

    <!-->Product strings<!-->
    <string name="user_uploaded_with_date_text">Added by %1$s on %2$s</string>
    <string name="user_uploaded_text">Added by %1$s</string>
    <string name="no_records">No records found</string>
    <string name="address">%1$d %2$s Street %3$s</string>
    <string name="product_name">Product name</string>
    <string name="name">Name</string>
    <string name="store_url">Url</string>
    <string name="store_address">Address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_no">House No.</string>
    <string name="store_phone">Phone</string>
    <string name="comment">Comment</string>
    <string name="add_product">Add product</string>
    <string name="edit_product">Edit product</string>
    <string name="save_product">Save product</string>
    <string name="store_details">Store details</string>
    <string name="places_api_key">AIzaSyCEsq36NBlHcfNnyxemW-YfmV_EFIqLeNM</string>
    <string name="required_err_msg">%1$s is required</string>
    <string name="store_name">Store name</string>
    <string name="required_err_msg_default">This field is required</string>
    <string name="save_recipe">Save recipe</string>
    <string name="city_spinner_title">Select city</string>
    <string name="take_photo_option">Take Photo</string>
    <string name="gallery_option">Choose from Gallery</string>
    <string name="cancel_option">Cancel</string>
    <string name="confirm_option">Ok</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="dialog_msg_delete_prod">"Are you sure you want to delete this product?"</string>
    <string name="dialog_msg_delete_recipe">"Are you sure you want to delete this recipe?"</string>
    <string name="products_fragment_name">Products</string>
    <string name="news_fragment_name">What\'s new</string>
    <string name="recipes_fragment_name">Recipes</string>
    <string name="not_valid_number_msg">Not Valid Number</string>
    <string name="not_valid_url_msg">Not Valid Url</string>
    <string name="no_internet_connection_msg">No internet connection</string>
    <string name="filtered_by">Filtered by: </string>
    <string name="product_notification_title">New Gluten free product</string>
    <string name="product_notification_text">%1$s was added in %2$s</string>
    <string name="product_added_msg">%1$s product is added successfully</string>
    <string name="product_saved_msg">%1$s product is saved successfully</string>
    <string name="add_product_image_title">Select product image</string>


    <!-->Recipe strings<!-->
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients_title">Recipe ingredients</string>
    <string name="select_recipe_category">Select recipes category</string>
    <string name="recipes_category">Recipes category</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="instructions">Instructions</string>
    <string name="step">Step</string>
    <string name="recipe_details">More details</string>
    <string name="preparation_time">Preparation time</string>
    <string name="preparation_time_title">Preparation time:</string>
    <string name="diners_number_title">Diners number:</string>
    <string name="difficulty_preparation_title">Difficulty in preparation:</string>
    <string name="diners_number">Diners number</string>
    <string name="select_difficulty_preparation">Select Difficulty</string>
    <string name="recipe_story">The story behind the recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="recipe_notification_title">New Gluten free recipe</string>
    <string name="recipe_added_msg">%1$s recipe is added successfully</string>
    <string name="recipe_saved_msg">%1$s recipe is saved successfully</string>
    <string name="add_recipe_image_title">Add recipe image</string>
    <string name="difficulty_preparation">Difficulty in preparation</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="product_details">Product details</string>
    <string name="tbd">TBD</string>
    <!-->Israel cities array<!-->
    <string-array name="cities_array">
        <item>Acrea</item>
        <item>Afula</item>
        <item>Arad</item>
        <item>Ariel</item>
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Bat Yam</item>
        <item>Beershebae</item>
        <item>Beit She\'an</item>
        <item>Beit Shemesh</item>
        <item>Beitar Illit</item>
        <item>Bnei Brak</item>
        <item>Dimona</item>
        <item>Eilat</item>
        <item>El\'ad</item>
        <item>Giv\'at Shmuel</item>
        <item>Givatayim</item>
        <item>Hadera</item>
        <item>Haifa</item>
        <item>Herzliya</item>
        <item>Hod HaSharon</item>
        <item>Holon</item>
        <item>Jerusalem</item>
        <item>Karmiell</item>
        <item>Kfar Saba</item>
        <item>Kfar Yona</item>
        <item>Kiryat Ata</item>
        <item>Kiryat Bialikq</item>
        <item>Kiryat Gat</item>
        <item>Kiryat Malakhis</item>
        <item>Kiryat Motzkint</item>
        <item>Kiryat Onou</item>
        <item>Kiryat Shmonav</item>
        <item>Kiryat Yam</item>
        <item>Lod</item>
        <item>Ma\'ale Adumim</item>
        <item>Ma\'alot-Tarshiha</item>
        <item>Migdal HaEmek</item>
        <item>Modi\'in Illit</item>
        <item>Modi\'in-Maccabim-Re\'ut</item>
        <item>Nahariya</item>
        <item>Nazareth</item>
        <item>Nazareth Illit</item>
        <item>Nesher</item>
        <item>Ness Ziona</item>
        <item>Netanya</item>
        <item>Netivot</item>
        <item>Ofakim</item>
        <item>Or Akiva</item>
        <item>Or Yehuda</item>
        <item>Petah Tikva</item>
        <item>Qalansawe</item>
        <item>Ra\'anana</item>
        <item>Rahat</item>
        <item>Ramat Gan</item>
        <item>Ramat HaSharon</item>
        <item>Ramla</item>
        <item>Rehovot</item>
        <item>Rishon LeZion</item>
        <item>Rosh HaAyin</item>
        <item>Safed</item>
        <item>Sderot</item>
        <item>Shfar\'am</item>
        <item>Tamra</item>
        <item>Tayibe</item>
        <item>Tel Aviv</item>
        <item>Tiberias</item>
        <item>Tira</item>
        <item>Tirat Carmel</item>
        <item>Umm al-Fahm</item>
        <item>Yavne</item>
        <item>Yehud</item>
        <item>Yokneam</item>
    </string-array>

    <!-->Difficulty recipe preparation array<!-->
    <string-array name="difficulty_recipe_preparation_array">
        <item>Very Easy</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>

    <!-->Recipe categories array<!-->
    <string-array name="recipe_categories_array">
        <item>Appetizers and Snack</item>
        <item>Breads &amp; Rolls</item>
        <item>Cakes</item>
        <item>Cheeses</item>
        <item>Cookies &amp; Candy</item>
        <item>Desserts</item>
        <item>Fish Recipes</item>
        <item>Kid-Friendly Recipes</item>
        <item>Meat and Poultry</item>
        <item>Pasta</item>
        <item>Pies and Quiches</item>
        <item>Rice, Grains, Beans &amp; Stuffing</item>
        <item>Salads</item>
        <item>Sauces &amp; Gravy</item>
        <item>Soups</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="share">Share</string>
    <string name="add_favorites">Add favorites</string>
    <string name="navigate">Navigate</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="search">Search</string>
</resources>
