<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewAddRecipe"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/recipe_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/star_on"
            android:scaleType="fitStart"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/recipe_name_txt"
            android:layout_height="wrap_content"
            tools:text="@string/recipe_name"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/added_by_txt"
            android:layout_height="wrap_content"
            tools:text="@string/user_uploaded_text"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/recipe_story_txt"
            android:layout_height="wrap_content"
            tools:text="@string/recipe_story"
            android:textStyle="italic"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/ingredients_title_txt"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_title"
            android:layout_width="fill_parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large">
        </TextView>

        <TextView
            android:id="@+id/ingredients_txt"
            android:layout_height="wrap_content"
            tools:text="@string/ingredients"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/instructions_title_txt"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_width="fill_parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large">
        </TextView>


        <TextView
            android:id="@+id/instructions_txt"
            android:layout_height="wrap_content"
            tools:text="@string/instructions"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/preparation_time_txt"
            android:layout_height="wrap_content"
            tools:text="@string/preparation_time"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:id="@+id/diners_number_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/diners_number">
        </TextView>

        <TextView
            android:id="@+id/difficulty_preparation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/difficulty_preparation">
        </TextView>
    </LinearLayout>
</ScrollView>
