<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:src="@drawable/products"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin">

            <TextView
                android:id="@+id/product_name_txt"
                android:layout_height="wrap_content"
                tools:text="@string/product_name"
                android:layout_width="fill_parent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp">
            </TextView>

             <TextView
                android:id="@+id/store_details_title"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_details"
                android:textColor="@color/greenAppColor"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large">
            </TextView>
            <TextView
                android:id="@+id/store_name_txt"
                android:layout_height="wrap_content"
                tools:text="@string/name"
                android:layout_width="fill_parent">
            </TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_txt"
                tools:text="@string/store_address"
                android:autoLink="map"/>
            <TextView
                android:id="@+id/store_url_txt"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                tools:text="@string/store_url"
                android:autoLink="web"
                android:linksClickable="true">
            </TextView>
            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_height="fill_parent">
                <ImageView
                    android:id="@+id/store_phone_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@drawable/ic_call_24dp" />
                <TextView
                    android:id="@+id/store_phone_txt"
                    android:layout_height="wrap_content"
                    tools:text="@string/store_phone"
                    android:autoLink="phone"
                    android:layout_width="fill_parent">
                </TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/product_comment_txt"
                android:layout_height="wrap_content"
                tools:text="@string/comment"
                android:layout_width="fill_parent">
            </TextView>
            <TextView
                android:id="@+id/product_user_uploaded_txt"
                android:layout_height="wrap_content"
                tools:text="@string/user_uploaded_text"
                android:layout_width="fill_parent">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>